--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <!-- <p id="welcome-el" ></p> -->
-<div>
+<div class="container">
     <h1>People entered:</h1>
     <h2 id="count-el">0</h2>
     <button id="increment-btn" onclick= "increment()">INCREMENT</button>
